fix(layout): wrap router outlet in a div for improved responsiveness

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -75,6 +75,13 @@
 	overflow-y: auto;
     padding: var(--content-spacing);
 	color: var(--ig-gray-900);
+	
+	 > div {
+		max-width: 1200px;
+		width: 100%;
+		min-width: 320px;
+		margin: 0 auto;
+	}
 }
 
 .demos-filter {
